--- a/index.html
+++ b/index.html
@@ -25,97 +25,104 @@
     <header class="page-header">
       <div class="container">
         <!-- Navigation -->
-        <nav class="main-nav">
-          <a
-            href="https://borschvs.github.io/goit-markup-hw-06/"
-            class="page-header__logo logo"
-            rel="noopener"
-            target="_blank"
-            >Web<span class="page-header__logo--color">Studio</span></a
-          >
-          <button
-            type="button"
-            class="menu-button"
-            data-menu-button
-            aria-expanded="true"
-            aria-controls="mobile-menu"
-          >
-            <svg
-              class="menu-button__icon"
-              width="40"
-              height="40"
-              aria-label="Переключатель мобильного меню"
+        
+          <nav class="main-nav">
+            <a
+              href="https://borschvs.github.io/goit-markup-hw-06/"
+              class="page-header__logo logo"
+              rel="noopener"
+              target="_blank"
+              >Web<span class="page-header__logo--color">Studio</span></a
             >
-              <use
-                class="icon-cross"
-                href="./images/symbol-defs.svg#cross"
-              ></use>
-              <use class="icon-menu" href="./images/symbol-defs.svg#menu"></use>
-            </svg>
-          </button>
-          <div
-            class="menu-container"
-            id="menu-container"
-            aria-expanded="false"
-            data-menu
-          >
-            <ul class="site-nav">
-              <li class="site-nav__item">
-                <a
-                  href="./index.html"
-                  class="site-nav__link site-nav__link--visit"
-                  >Студія</a
-                >
-              </li>
-              <li class="site-nav__item">
-                <a
-                  href="./portfolio.html"
-                  class="site-nav__link"
-                  target="_self"
-                  rel="nofollow"
-                  >Портфоліо</a
-                >
-              </li>
-              <li class="site-nav__item">
-                <a href="#" class="site-nav__link">Контакти</a>
-              </li>
-            </ul>
+            <button
+              type="button"
+              class="menu-button"
+              data-menu-button
+              aria-expanded="true"
+              aria-controls="mobile-menu"
+            >
+              <svg
+                class="menu-button__icon"
+                width="40"
+                height="40"
+                aria-label="Переключатель мобильного меню"
+              >
+                <use
+                  class="icon-cross"
+                  href="./images/symbol-defs.svg#cross"
+                ></use>
+                <use
+                  class="icon-menu"
+                  href="./images/symbol-defs.svg#menu"
+                ></use>
+              </svg>
+            </button>
+            <div
+              class="menu-container"
+              id="menu-container"
+              aria-expanded="false"
+              role="navigation"
+              data-menu
+            >
+              <ul class="site-nav">
+                <li class="site-nav__item">
+                  <a
+                    href="./index.html"
+                    class="site-nav__link site-nav__link--visit"
+                    >Студія</a
+                  >
+                </li>
+                <li class="site-nav__item">
+                  <a
+                    href="./portfolio.html"
+                    class="site-nav__link"
+                    target="_self"
+                    rel="nofollow"
+                    >Портфоліо</a
+                  >
+                </li>
+                <li class="site-nav__item">
+                  <a href="#" class="site-nav__link">Контакти</a>
+                </li>
+              </ul>
 
-            <ul class="contacts">
-              <li class="contacts__item">
-                <a href="mailto:info@devstudio.com" class="contacts__link"
-                  ><svg class="icon-post" width="16" height="12">
-                    <use href="./images/symbol-defs.svg#icon-envelope"></use>
-                  </svg>
-                  <span>info@devstudio.com</span>
-                </a>
-              </li>
-              <li class="contacts__item">
-                <a href="tel:+380961111111" class="contacts__link"
-                  ><svg class="icon-phone" width="10" height="16">
-                    <use href="./images/symbol-defs.svg#icon-smartphone"></use>
-                  </svg>
-                  <span>+38 096 111 11 11</span>
-                </a>
-              </li>
-            </ul>
+              <ul class="contacts">
+                <li class="contacts__item">
+                  <a href="mailto:info@devstudio.com" class="contacts__link"
+                    ><svg class="icon-post" width="16" height="12">
+                      <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                    </svg>
+                    <span class="contacts__mail">info@devstudio.com</span>
+                  </a>
+                </li>
+                <li class="contacts__item">
+                  <a href="tel:+380961111111" class="contacts__link"
+                    ><svg class="icon-phone" width="10" height="16">
+                      <use
+                        href="./images/symbol-defs.svg#icon-smartphone"
+                      ></use>
+                    </svg>
+                    <span class="contacts__number">+38 096 111 11 11</span>
+                  </a>
+                </li>
+              </ul>
 
-            <ul class="media-list">
-              <li class="media-list__item">
-                <a href="" class="media-list__link">Instagram</a>
-              </li>
-              <li class="media-list__item">
-                <a href="" class="media-list__link">Twitter</a>
-              </li>
-              <li class="media-list__item">
-                <a href="" class="media-list__link">Facebook</a>
-              </li>
-              <li class="media-list__item">
-                <a href="" class="media-list__link">LinkedIn</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+              <ul class="media-list">
+                <li class="media-list__item">
+                  <a href="" class="media-list__link">Instagram</a>
+                </li>
+                <li class="media-list__item">
+                  <a href="" class="media-list__link">Twitter</a>
+                </li>
+                <li class="media-list__item">
+                  <a href="" class="media-list__link">Facebook</a>
+                </li>
+                <li class="media-list__item">
+                  <a href="" class="media-list__link">LinkedIn</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
       </div>
     </header>
 
@@ -137,19 +144,19 @@
           <ul class="feauture-list">
             <li class="feauture-list__item">
               <div class="feauture-box">
-                <svg class="feature-box__icon">
+                <svg class="feauture-box__icon">
                   <use href="./images/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="feauture-box__subtitle">УВАГА ДО ДЕТАЛЕЙ</h3>
-              <p class="feature-box__text">
+              <p class="feauture-box__text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
             <li class="feauture-list__item">
               <div class="feauture-box">
-                <svg class="feature-box__icon">
+                <svg class="feauture-box__icon">
                   <use href="./images/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -161,7 +168,7 @@
             </li>
             <li class="feauture-list__item">
               <div class="feauture-box">
-                <svg class="feature-box__icon">
+                <svg class="feauture-box__icon">
                   <use href="./images/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -172,7 +179,7 @@
             </li>
             <li class="feauture-list__item">
               <div class="feauture-box">
-                <svg class="feature-box__icon">
+                <svg class="feauture-box__icon">
                   <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -196,17 +203,18 @@
                 <picture>
                   <source
                     srcset="
-                      ./images/about/desktop-apps-370.webp    1x,
-                      ./images/about/desktop-apps-740@2x.webp 2x
+                      ./images/about/desktop-apps-370.webp    370w,
+                      ./images/about/desktop-apps-740@2x.webp 740w
                     "
                     type="image/webp"
+                    sizes="(min-width: 1200px) 33vw, 100vw"
                   />
                   <img
                     srcset="
-                      ./images/about/desktop-apps-370.jpg    1x,
-                      ./images/about/desktop-apps-740@2x.jpg 2x
+                      ./images/about/desktop-apps-370.jpg    370w,
+                      ./images/about/desktop-apps-740@2x.jpg 740w
                     "
-                    src="./images/desktop-apps-370.jpg"
+                    src="./images/about/desktop-apps-370.jpg"
                     alt="Кодування на планшеті"
                     sizes="(min-width: 1200px) 33vw, 100vw"
                   />
@@ -219,19 +227,20 @@
                 <picture>
                   <source
                     srcset="
-                      ./images/about/mobile-apps-370.webp    1x,
-                      ./images/about/mobile-apps-740@2x.webp 2x
+                      ./images/about/mobile-apps-370.webp    370w,
+                      ./images/about/mobile-apps-740@2x.webp 740w
                     "
                     type="image/webp"
+                    sizes="(min-width: 1200px) 33vw"
                   />
                   <img
                     srcset="
-                      ./images/about/mobile-apps-370.jpg    1x,
-                      ./images/about/mobile-apps-740@2x.jpg 2x
+                      ./images/about/mobile-apps-370.jpg    370w,
+                      ./images/about/mobile-apps-740@2x.jpg 740w
                     "
                     src="./images/mobile-apps-370.jpg"
                     alt="Кодування на планшеті"
-                    sizes="(min-width: 1200px) 33vw, 100vw"
+                    sizes="(min-width: 1200px) 33vw"
                   />
                 </picture>
                 <p class="about-thumb__text">Мобільні додатки</p>
@@ -242,19 +251,20 @@
                 <picture>
                   <source
                     srcset="
-                      ./images/about/design-370.webp    1x,
-                      ./images/about/design-740@2x.webp 2x
+                      ./images/about/design-370.webp    370w,
+                      ./images/about/design-740@2x.webp 740w
                     "
                     type="image/webp"
+                    sizes="(min-width: 1200px) 33vw"
                   />
                   <img
                     srcset="
-                      ./images/about/design-370.jpg    1x,
-                      ./images/about/design-740@2x.jpg 2x
+                      ./images/about/design-370.jpg    370w,
+                      ./images/about/design-740@2x.jpg 740w
                     "
                     src="./images/design-370.jpg"
                     alt="Кодування на планшеті"
-                    sizes="(min-width: 1200px) 33vw, 100vw"
+                    sizes="(min-width: 1200px) 33vw"
                   />
                 </picture>
                 <p class="about-thumb__text">Дизайнерські рішення</p>
@@ -278,6 +288,7 @@
                     ./images/team/pd-900@2x.webp 900w
                   "
                   type="image/webp"
+                  sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, 100vw"
                 />
 
                 <img
@@ -345,6 +356,7 @@
                     ./images/team/frontender-900@2x.webp 900w
                   "
                   type="image/webp"
+                  sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, 100vw"
                 />
                 <img
                   class="team-img"
@@ -412,6 +424,7 @@
                     ./images/team/marketolog-900@2x.webp 900w
                   "
                   type="image/webp"
+                  sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, 100vw"
                 />
                 <img
                   srcset="
@@ -478,6 +491,7 @@
                     ./images/team/ui-900@2x.webp 900w
                   "
                   type="image/webp"
+                  sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, 100vw"
                 />
                 <img
                   srcset="
