--- a/index.html
+++ b/index.html
@@ -25,104 +25,99 @@
     <header class="page-header">
       <div class="container">
         <!-- Navigation -->
-        
-          <nav class="main-nav">
-            <a
-              href="https://borschvs.github.io/goit-markup-hw-06/"
-              class="page-header__logo logo"
-              rel="noopener"
-              target="_blank"
-              >Web<span class="page-header__logo--color">Studio</span></a
-            >
-            <button
-              type="button"
-              class="menu-button"
-              data-menu-button
-              aria-expanded="true"
-              aria-controls="mobile-menu"
-            >
-              <svg
-                class="menu-button__icon"
-                width="40"
-                height="40"
-                aria-label="Переключатель мобильного меню"
-              >
-                <use
-                  class="icon-cross"
-                  href="./images/symbol-defs.svg#cross"
-                ></use>
-                <use
-                  class="icon-menu"
-                  href="./images/symbol-defs.svg#menu"
-                ></use>
-              </svg>
-            </button>
-            <div
-              class="menu-container"
-              id="menu-container"
-              aria-expanded="false"
-              role="navigation"
-              data-menu
-            >
-              <ul class="site-nav">
-                <li class="site-nav__item">
-                  <a
-                    href="./index.html"
-                    class="site-nav__link site-nav__link--visit"
-                    >Студія</a
-                  >
-                </li>
-                <li class="site-nav__item">
-                  <a
-                    href="./portfolio.html"
-                    class="site-nav__link"
-                    target="_self"
-                    rel="nofollow"
-                    >Портфоліо</a
-                  >
-                </li>
-                <li class="site-nav__item">
-                  <a href="#" class="site-nav__link">Контакти</a>
-                </li>
-              </ul>
 
-              <ul class="contacts">
-                <li class="contacts__item">
-                  <a href="mailto:info@devstudio.com" class="contacts__link"
-                    ><svg class="icon-post" width="16" height="12">
-                      <use href="./images/symbol-defs.svg#icon-envelope"></use>
-                    </svg>
-                    <span class="contacts__mail">info@devstudio.com</span>
-                  </a>
-                </li>
-                <li class="contacts__item">
-                  <a href="tel:+380961111111" class="contacts__link"
-                    ><svg class="icon-phone" width="10" height="16">
-                      <use
-                        href="./images/symbol-defs.svg#icon-smartphone"
-                      ></use>
-                    </svg>
-                    <span class="contacts__number">+38 096 111 11 11</span>
-                  </a>
-                </li>
-              </ul>
+        <nav class="main-nav">
+          <a
+            href="https://borschvs.github.io/goit-markup-hw-06/"
+            class="page-header__logo logo"
+            rel="noopener"
+            target="_blank"
+            >Web<span class="page-header__logo--color">Studio</span></a
+          >
+          <button
+            type="button"
+            class="menu-button"
+            data-menu-button
+            aria-expanded="true"
+            aria-controls="mobile-menu"
+          >
+            <svg
+              class="menu-button__icon"
+              width="40"
+              height="40"
+              aria-label="Переключатель мобильного меню"
+            >
+              <use
+                class="icon-cross"
+                href="./images/symbol-defs.svg#cross"
+              ></use>
+              <use class="icon-menu" href="./images/symbol-defs.svg#menu"></use>
+            </svg>
+          </button>
+          <div
+            class="menu-container"
+            id="menu-container"
+            aria-expanded="false"
+            role="navigation"
+            data-menu
+          >
+            <ul class="site-nav">
+              <li class="site-nav__item">
+                <a
+                  href="./index.html"
+                  class="site-nav__link site-nav__link--visit"
+                  >Студія</a
+                >
+              </li>
+              <li class="site-nav__item">
+                <a
+                  href="./portfolio.html"
+                  class="site-nav__link"
+                  target="_self"
+                  rel="nofollow"
+                  >Портфоліо</a
+                >
+              </li>
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Контакти</a>
+              </li>
+            </ul>
 
-              <ul class="media-list">
-                <li class="media-list__item">
-                  <a href="" class="media-list__link">Instagram</a>
-                </li>
-                <li class="media-list__item">
-                  <a href="" class="media-list__link">Twitter</a>
-                </li>
-                <li class="media-list__item">
-                  <a href="" class="media-list__link">Facebook</a>
-                </li>
-                <li class="media-list__item">
-                  <a href="" class="media-list__link">LinkedIn</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
+            <ul class="contacts">
+              <li class="contacts__item">
+                <a href="mailto:info@devstudio.com" class="contacts__link"
+                  ><svg class="icon-post" width="16" height="12">
+                    <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                  </svg>
+                  <span class="contacts__mail">info@devstudio.com</span>
+                </a>
+              </li>
+              <li class="contacts__item">
+                <a href="tel:+380961111111" class="contacts__link"
+                  ><svg class="icon-phone" width="10" height="16">
+                    <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                  </svg>
+                  <span class="contacts__number">+38 096 111 11 11</span>
+                </a>
+              </li>
+            </ul>
+
+            <ul class="media-list">
+              <li class="media-list__item">
+                <a href="" class="media-list__link">Instagram</a>
+              </li>
+              <li class="media-list__item">
+                <a href="" class="media-list__link">Twitter</a>
+              </li>
+              <li class="media-list__item">
+                <a href="" class="media-list__link">Facebook</a>
+              </li>
+              <li class="media-list__item">
+                <a href="" class="media-list__link">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
       </div>
     </header>
 
@@ -284,13 +279,14 @@
               <picture>
                 <source
                   srcset="
+                    ./images/team/pd-354.webp    354w,
                     ./images/team/pd-450.webp    450w,
+                    ./images/team/pd-708@2x.webp 708w,
                     ./images/team/pd-900@2x.webp 900w
                   "
                   type="image/webp"
                   sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, 100vw"
                 />
-
                 <img
                   srcset="
                     ./images/team/pd-450.jpg    450w,
