Fixed modal and card-set

--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
                 />
                 <source
                   srcset="
-                    ./images/team/pd-354.jpg    354w,
-                    ./images/team/pd-708@2x.jpg 708w
+                    ./images/team/pd-270.jpg    270w,
+                    ./images/team/pd-540@2x.jpg 540w
                   "
                   media="(min-width: 1200px)"
                   sizes="(min-width: 1200px) 25vw"
@@ -336,7 +336,7 @@
                     ./images/team/pd-708@2x.jpg 708w,
                     ./images/team/pd-900@2x.jpg 900w
                   "
-                  src="./images-portfolio/lab.jpg"
+                  src="./images/team/pd-450.jpg"
                   alt="Ноутбук із зображенням сайту"
                   sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, 100vw"
                 />
