--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,7 @@
     <header class="page-header">
       <div class="container">
         <!-- Navigation -->
+
         <nav class="main-nav">
           <a
             href="https://borschvs.github.io/goit-markup-hw-06/"
@@ -54,13 +55,17 @@
           <div
             class="menu-container"
             id="menu-container"
-            role="navigation"
             aria-expanded="false"
+            role="navigation"
             data-menu
           >
             <ul class="site-nav">
               <li class="site-nav__item">
-                <a href="./index.html" class="site-nav__link">Студія</a>
+                <a
+                  href="./index.html"
+                  class="site-nav__link"
+                  >Студія</a
+                >
               </li>
               <li class="site-nav__item">
                 <a
@@ -82,7 +87,7 @@
                   ><svg class="icon-post" width="16" height="12">
                     <use href="./images/symbol-defs.svg#icon-envelope"></use>
                   </svg>
-                  info@devstudio.com
+                  <span class="contacts__mail">info@devstudio.com</span>
                 </a>
               </li>
               <li class="contacts__item">
@@ -90,7 +95,7 @@
                   ><svg class="icon-phone" width="10" height="16">
                     <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                   </svg>
-                  +38 096 111 11 11
+                  <span class="contacts__number">+38 096 111 11 11</span>
                 </a>
               </li>
             </ul>
