Виконав фікси модального вікна та мобільного меню

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             type="button"
             class="menu-button"
             data-menu-button
+            data-mobile-open
             aria-expanded="true"
           >
             <svg
@@ -925,8 +926,9 @@
               value="policy"
             />
             <span class="icon-checked"></span>
-            <span class="checkbox-input__txt"></span> Погоджуюся з розсилкою та приймаю
+            <span class="checkbox-input__txt"> Погоджуюся з розсилкою та приймаю
             <a href="#" class="policy-link">Умови договору</a>
+          </span>
           </label>
           <button class="button-submit" type="submit">Відправити</button>
         </form>
