--- a/portfolio.html
+++ b/portfolio.html
@@ -37,6 +37,7 @@
             type="button"
             class="menu-button"
             data-menu-button
+            data-mobile-open
             aria-expanded="true"
           >
             <svg
